# rpi-auto-wifi

./: .coveragerc  .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml  setup.py  tox.ini  wpa_connect.py  wpa_util.py
rpi_auto_wifi/: __init__.py  rpi_connect.py  wpa_util.py
tests/: test_wpa_connect.py
tests/fixtures/: conn_status-connected.txt  conn_status-disconnected.txt  conn_status-inactive.txt  disconnect.txt  enable_network.txt  list_networks-current.txt  list_networks-disabled.txt  list_networks-disconnected.txt  reconnect.txt  scan_results-aes_wps_off.txt  scan_results-aes_wps_on.txt  scan_results-empty.txt  scan_results-open.txt  status-connected.txt  wps_pbc-success.txt
