[metadata]
name = 'rpi-auto-wifi'
version = '0.0.1'
description = ''
author = 'Mike Crowe'
author_email = 'drmikecrowe@gmail.com'
license = 'MIT/Apache-2.0'
url = 'https://github.com/drmikecrowe/rpi-auto-wifi'

[requires]
python_version = ['3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
